--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: coreRlessons
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Lesson documents for use with the coreR package
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
