feat: updating styling to better match NCEAS
Added an Avenir-like font, changed header colors in css

Added a title-block-banner to the _quarto.yml with color from NCEAS page

--- a/inst/course_files/_quarto_template.yml
+++ b/inst/course_files/_quarto_template.yml
@@ -37,7 +37,10 @@ format:
   html:
     theme: cosmo
     css: style.css
-    # Note HD: latex rendering issues, maybe with column-margin
+    title-block-banner: "#0b5f4acc" ### doesn't exactly match header color in style.css...?
+    title-block-banner-color: "white"
+    ### add css to tighten the margins? add an NCEAS or LH logo in the header?
+  # Note HD: latex rendering issues, maybe with column-margin
   # pdf:
   #   documentclass: scrreprt
 
