--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,6 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/nceas-learning-hub/coreRlessons
 BugReports: https://github.com/nceas-learning-hub/coreRlessons/issues
+Depends: 
+    R (>= 2.10)
+RoxygenNote: 7.3.2
