feat: updating aesthetic features tested in coreR_test

--- a/inst/course_files/_quarto_template.yml
+++ b/inst/course_files/_quarto_template.yml
@@ -7,11 +7,7 @@ book:
   subtitle: "COURSE_DATES"
   reader-mode: false
 
-  # NoteHD: cover image is not working
-  # cover-image: cover.png
-  # cover-image-alt: "Learning Hub logo in the shape of a hexagon with a bee in the center"
-
-  # favicon: cover.png # learning hub logo
+  favicon: logo-lh-hex.png # learning hub logo on browser tab
 
   sidebar:
     title: "Training Materials"
@@ -34,7 +30,7 @@ book:
     ### NCEAS main website footer:
     # center: "\u00a9 The Regents of the University of California, All Rights Reserved"
     # could also include license info?
-    background: secondary
+    background: "#0C4537"
 
 
 bibliography: book.bib
@@ -43,12 +39,7 @@ format:
   html:
     theme: cosmo
     css: style.css
-    # title-block-banner: "title-block-stripe.png"
-    # title-block-banner: "#0b5f4acc" ### doesn't exactly match header color in style.css...?
-    title-block-banner-color: "white"
+    title-block-banner: "blue" ### need to invoke this to "turn on" the title-block-banner
     ### add css to tighten the margins? add an NCEAS or LH logo in the header?
-  # Note HD: latex rendering issues, maybe with column-margin
-  # pdf:
-  #   documentclass: scrreprt
 
 editor: source
