--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: coreRlessons
 Type: Package
 Title: Lesson documents for use with the coreR package
-Version: 0.1.0
+Version: 2024.11.07
 Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Maintainer: Casey O'Hara <ohara@nceas.ucsb.edu>
+Description: This package contains all the lessons (as .qmd) and
+    associated files (images, data, slides) for building a course
+    using the coreR package.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
