--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,9 @@ BugReports: https://github.com/nceas-learning-hub/coreRlessons/issues
 Depends: 
     R (>= 2.10)
 RoxygenNote: 7.3.2
+Imports:
+    dplyr,
+    here,
+    readr,
+    tidyr,
+    stringr
