--- a/inst/course_files/_quarto_template.yml
+++ b/inst/course_files/_quarto_template.yml
@@ -4,6 +4,8 @@ project:
 
 filters:
 - nceas-learning-hub/lh_theme
+exercises: ### for custom theme callouts
+  number: false ### see https://cambiotraining.github.io/quarto-course-template/materials/02-content_guidelines.html but does not work
 editor: source
 bibliography: book.bib
 
@@ -12,7 +14,9 @@ format:
     theme:
        light: _extensions/nceas-learning-hub/lh_theme/lh_light.scss
        dark: _extensions/nceas-learning-hub/lh_theme/lh_dark.scss
-    css: _extensions/nceas-learning-hub/lh_theme/lh-style.css   ### doesn't render NCEAS logo if put in scss file?
+    css: _extensions/nceas-learning-hub/lh_theme/lh-style.css
+      ### doesn't render NCEAS logo if put in scss file?
+      ### seems to work locally but not when published on GitHub
     toc: true
     number-sections: true
     title-block-banner: "blue" ### need this here to "turn on" the title-block-banner
