--- a/inst/course_files/_quarto_template.yml
+++ b/inst/course_files/_quarto_template.yml
@@ -10,16 +10,7 @@ editor: source
 bibliography: book.bib
 
 format:
-  html:
-    theme:
-       light: _extensions/nceas-learning-hub/lh_theme/lh_light.scss
-       dark: _extensions/nceas-learning-hub/lh_theme/lh_dark.scss
-    css: _extensions/nceas-learning-hub/lh_theme/lh_style.css
-      ### doesn't render NCEAS logo if put in scss file?
-      ### seems to work locally but not when published on GitHub
-    toc: true
-    number-sections: true
-    title-block-banner: "blue" ### need this here to "turn on" the title-block-banner
+  lh_theme-html
 
 website:
   title: "COURSE_TITLE (COURSE_DATES)"
