--- a/inst/course_files/_quarto_template.yml
+++ b/inst/course_files/_quarto_template.yml
@@ -10,7 +10,16 @@ editor: source
 bibliography: book.bib
 
 format:
-  lh_theme-html
+  html:
+    theme:
+       light: _extensions/nceas-learning-hub/lh_theme/lh_light.scss
+       dark: _extensions/nceas-learning-hub/lh_theme/lh_dark.scss
+    css: banner/banner.css
+      ### doesn't render NCEAS logo if put in scss file?
+      ### seems to work locally but not when published on GitHub
+    toc: true
+    number-sections: true
+    title-block-banner: "blue" ### need this here to "turn on" the title-block-banner
 
 website:
   title: "COURSE_TITLE (COURSE_DATES)"
@@ -43,10 +52,12 @@ website:
         href: COURSE_URL
     contents:
       - index.qmd # preface
-      SESSION_LINKS
+      # START SESSIONS
+      # SESSION_LINKS
+      # END SESSIONS
 
   page-footer:
-    center: "Copyright \u00a9 2024, NCEAS"
+    center: "Copyright \u00a9 2025, NCEAS"
     ### NCEAS main website footer:
     # center: "\u00a9 The Regents of the University of California, All Rights Reserved"
     # could also include license info?
